# duckdb-ann

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  devenv.nix  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
bench/: hnsw_apple_silicon.sql  metal_distance_bench_v2.mm
faiss-metal/shaders/: diskann_distance.metal
rust_lib/: Cargo.toml
rust_lib/src/: disk_provider.rs  ffi.rs  file_format.rs  index_manager.rs  lib.rs  metal_ffi.rs  provider.rs  runtime.rs  streaming_build.rs
src/: ann_optimizer.cpp  ann_search.cpp  annsearch_extension.cpp  annsearch_list.cpp  diskann_functions.cpp  diskann_index.cpp  faiss_fn_add.cpp  faiss_fn_create.cpp  faiss_fn_gpu.cpp  faiss_fn_manage.cpp  faiss_fn_persist.cpp  faiss_fn_search.cpp  faiss_index.cpp  faiss_index_manager.cpp  faiss_vector_utils.cpp  gpu_backend_cpu.cpp  gpu_backend_metal.mm  hnsw_metal_search.cpp  metal_diskann_bridge.mm  metal_diskann_stub.cpp  rust_ffi.cpp
src/include/: annsearch_extension.hpp  diskann_index.hpp  faiss_index.hpp  faiss_index_manager.hpp  gpu_backend.hpp  hnsw_metal_search.hpp  metal_diskann_bridge.h  rust_ffi.hpp
test/sql/: ann_search_table.test  annsearch_list.test  diskann_advanced.test  diskann_basic.test  diskann_bound_index.test  diskann_delete.test  diskann_index.test  diskann_metric_ip.test  diskann_optimizer.test  diskann_persist.test  diskann_quantization.test  diskann_sq8_persist.test  diskann_streaming.test  edge_cases.test  faiss_basic.test  faiss_bind_after_restart.test  faiss_gpu.test  faiss_ivfflat.test  (+2 more)
