[package]
name = "diskann_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DiskANN operations exposed via C FFI for the DuckDB extension"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
# DiskANN
diskann = "0.45"
diskann-vector = "0.45"

# Async runtime (diskann is async-native)
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false }

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# Memory-mapped I/O
memmap2 = "0.9"
hashbrown = "0.15"

# Error handling
anyhow = "1"
